# sway_update

./: Cargo.toml  LICENSE.md  README.md  default.nix  flake.nix
src/: error.rs  event.rs  main.rs  message.rs  objects.rs
